<resources>
    <string name="app_name">HealthCareApp</string>
    <string name="healthcare_24_hours">HealthCare 24-Hours</string>
    <string name="login_label">Login</string>
    <string name="email_input">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="agilemobileapparchitects">\@AgileMobileAppArchitects</string>
    <string name="register">Sign in</string>
    <string name="password_hint">Password</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="register_button">Register</string>
    <string name="register_text">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Bar</string>
    <string name="close_nav">Close Navigation Bar</string>
</resources>