<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/testoscopebg"
    android:id="@+id/loginActivity">


    <!--    TextView for Company label-->
    <TextView
        android:id="@+id/textViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthcare_24_hours"
        android:textColor="@color/purple_500"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <!--    This is textview for login-->

    <!--    EditText for Email section-->
    <TextView
        android:id="@+id/LoginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:textColor="@color/purple_500"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogo"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/EmailLogin"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginHorizontal="50sp"
        android:background="@drawable/rounded_corner"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="20sp"
        android:ems="10"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        android:paddingVertical="10sp"
        android:paddingStart="20sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginLabel"
        app:layout_constraintVertical_bias="0.159" />

    <!--    EditText for Password section-->
    <EditText
        android:id="@+id/passLogin"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginHorizontal="50sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="20sp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingVertical="10sp"
        android:paddingStart="20sp"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailLogin"
        app:layout_constraintVertical_bias="0.123" />

<!--    question label-->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignInbutton"
        app:layout_constraintVertical_bias="0.222" />

    <!--    Link to register -->
    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="toRegistration"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agilemobileapparchitects"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />

    <Button
        android:id="@+id/SignInbutton"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80sp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="retrieveLoginData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLogin"
        app:layout_constraintVertical_bias="0.165" />
</androidx.constraintlayout.widget.ConstraintLayout>